# AppointmentServices/src/appoinments/controllers/appoinmentControllers.ts
@@ -1,12 +1,35 @@
 import { Request, Response, NextFunction } from 'express';
 import { Appointment } from '../types/appoinmets';
 import { AppointmentService } from '../services/appoinmentsService';
+import { PatientService } from '../services/patientService';
+import { SpecialistService } from '../services/specialistService';
 const appoinmentsService = new AppointmentService();
+const patientService = new PatientService();
+const specialistService = new SpecialistService();
 
 export class AppointmentController {
   async createAppointment(req: Request, res: Response, next: NextFunction): Promise<void> {
     try {
       const appointmentData: Appointment = req.body;
+      const { patientId, specialistId } = appointmentData;
+
+      const isPatientExists = await patientService.checkPatientExistence(+patientId, req.headers.authorization || '');
+      if (!isPatientExists) {
+        const error = new Error('Patient does not exist');
+        error.name = 'NotFound';
+        throw error;
+      }
+
+      const isSpecialistExists = await specialistService.checkSpecialistExistence(
+        specialistId,
+        req.headers.authorization || ''
+      );
+      if (!isSpecialistExists) {
+        const error = new Error('Specialist does not exist');
+        error.name = 'NotFound';
+        throw error;
+      }
+
       const newAppointment = await appoinmentsService.createAppointment(appointmentData);
       res.status(201).json(newAppointment);
     } catch (error) {
