# PatientServices/src/patients/types/patient.ts
@@ -1,6 +1,6 @@
 export type Patient = {
   firstName: string;
-  patientId: number;
+
   lastName: string;
   dateOfBirth: Date;
   address: {
